--- a/index.html
+++ b/index.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>02 // Data Self Visualization</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="content">
-            <div class="box box-1">
-              <div class="box-content center">
-                Box 1
-              </div>
-            </div>
-            <div class="box box-2">
-              <div class="box-content center">
-                Box 2
-              </div>
-            </div>
-        </div>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CSS Layout</title>
+  <link href="css/03_layout.css" type="text/css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
+<body>
+  <div class="content">
+    <div class="box box-1">
+     <div class="row row-1">
+      entertainment
+      <h2>
+        2.5 hours
+      </h2>
+      <h3>
+        2.85%
+      </h3>
+     </div>
+     <div class="row row-2">
+      business
+      <h2>
+        40.5 hours
+      </h2>
+      <h3>
+        45.76% 
+      </h3>
+     </div>
+    </div>
+        <div class="box box-2">
+      <div class="box-content center">
+        music
+        <h2>
+        36 hours
+      </h2>
+      <h3>
+        40.67%
+      </h3>
+      </div>
+    </div>
+         <div class="box box-3">
+     <div class="row row-1">
+      social media
+      <h2>
+        3.5 hours
+      </h2>
+      <h3>
+        3.95%
+      </h3>
+     </div>
+     <div class="row row-2">
+      personal
+      <h2>
+        6 hours
+      </h2>
+      <h3>
+        6.77%
+      </h3>
+     </div>
+    </div>
+</body>
 </html>
