--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
 </head>
 <body>
   <div class="content">
+
     <div class="box box-1">
-     <div class="row row-1">
+      <div class="box-content center">
+        business
+        <h2>
+          40.5 hours
+        </h2>
+        <h4>
+          45.76%
+        </h4>
+      </div>
+    </div>
+
+     <div class="box box-2">
+      <div class="row row-1">
+      personal
+      <h2>
+        6 hours
+      </h2>
+        <h4>
+        6.77% 
+        </h4>
+     </div>
+          <div class="row row-2">
+        social media
+        <h2>
+        3.5 hours
+        </h2>
+        <h4>
+        3.95%
+      </h4>
+      </div>
+          <div class="row row-3">
       entertainment
       <h2>
         2.5 hours
@@ -18,47 +49,19 @@
       <h4>
         2.85%
       </h4>
-     </div>
-     <div class="row row-2">
-      business
-      <h2>
-        40.5 hours
-      </h2>
-      <h4>
-        45.76% 
-      </h4>
-     </div>
+      </div>
     </div>
-        <div class="box box-2">
+     <div class="box box-3">
       <div class="box-content center">
-        music
-        <h2>
+      music
+      <h2>
         36 hours
       </h2>
       <h4>
         40.67%
       </h4>
-      </div>
-    </div>
-         <div class="box box-3">
-     <div class="row row-1">
-      social media
-      <h2>
-        3.5 hours
-      </h2>
-      <h4>
-        3.95%
-      </h4>
-     </div>
-     <div class="row row-2">
-      personal
-      <h2>
-        6 hours
-      </h2>
-      <h4>
-        6.77%
-      </h4>
      </div>
     </div>
+  </div>
 </body>
 </html>
